# bucklog

./: Cargo.toml
src/: lib.rs  main.rs
src/app/: assets.rs  config.rs  logs.rs  mod.rs
src/app/uis/: mod.rs
src/types/: json_log.rs  mod.rs
src/worker/: cmd_rcv.rs  mod.rs
